--- a/site-atmosfera/menu/style.css
+++ b/site-atmosfera/menu/style.css
@@ -626,7 +626,7 @@ p.texto {
     margin: 30px;
     border: 1px solid #D99F5A;
     display: grid;
-    grid-template-columns: 10fr 7fr;
+    grid-template-columns: 10fr 6fr;
 }
 .titulo-sec3 {
     color: #FEFEFE;
@@ -680,6 +680,7 @@ p.texto {
     grid-row: 1/4;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .ripple2 {
     background-position: center;
@@ -693,4 +694,145 @@ p.texto {
     background-color: #c2c2c2;
     background-size: 100%;
     transition: background 0s;
+}
+
+/* ------------------------------------------------------------- */
+
+.sec-img3 {
+    background-image: url(imagens/fotos/img-mesa-com-flor.png);
+    width: 100%; height: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+/* ----------------------------SEC 4---------------------------- */
+
+.sec4 {
+    width: 100%;
+    height: auto;
+    background: #FEFEFE;
+    position: relative;
+
+    display: flex;
+    
+}
+
+.linha-contorno-sec4 {
+    width: auto;
+    height: auto;
+    margin: 30px;
+    border: 1px solid #000;
+    display: grid;
+    width: 100%;
+    grid-template-columns: 5fr 4fr;
+}
+
+.centralizador-textos-sec4 {
+    grid-column: 1/2;
+    background-color: #282623;
+    display: grid;
+    
+    
+}
+.div-titulo-sec4 {
+    grid-row: 1/2;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+.titulo-sec4 {
+    
+    color: #000;
+    text-align: center;
+    font-family: "Libre Baskerville";
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: 40px 0 40px 0;
+}
+
+.div-texto-sec4 {
+    grid-row: 2/3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.texto-sec4 {
+
+    color: #000;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: 0 70px;
+}
+
+.div-botao-sec4 {
+    grid-row: 3/4;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    
+    margin: 40px 0 40px 0;
+}
+.botao-sec4 {
+    width: 350px;
+    height: 60px;
+    flex-shrink: 0;
+    border: 1px solid #000;
+
+    color: #000;
+    text-align: center;
+    font-family: "Libre Baskerville";
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    background: 0;
+    cursor: pointer;
+}
+.centralizador-fotos-sec4 {
+    grid-column: 2/3;
+    grid-row: 1/4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.container-fotos-sec4 {
+    width: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 30px;
+    gap: 30px;
+    background-color: #282623;
+    margin: 6%;
+    max-width: 420px;
+}
+
+.img-sec4 {
+    width: 100%;
+}
+
+.img1-sec4 {
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+.img2-sec4 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+}
+.img3-sec4 {
+    grid-row: 1/2;
+    grid-column: 2/3;
+}
+.img4-sec4 {
+    grid-row: 2/3;
+    grid-column: 2/3;
 }
