--- a/site-atmosfera/menu/style.css
+++ b/site-atmosfera/menu/style.css
@@ -18,25 +18,7 @@ body {
     position: fixed;
     z-index: 10;
 }
-@media (max-height: 700px) {
-    .navigation {
-        height: 85px;
-    }
-    .logo-atmosfera {
-        top: -3px !important;
-    }
-    .div-menu-button {
-        top: 14px !important;
-    }
-    .logo-atmosfera {
-        width: 180px !important;
-    }
-    .nav-table {
-        top: 23px !important;
-    }
 
-
-}
 
 .logo-atmosfera {
     width: 260px;
@@ -48,22 +30,7 @@ body {
     cursor: pointer;
 }
 
-@media (max-width: 850px){
-    .nav-table {
-        display: none;
-    }
-    .logo-atmosfera {
-        animation: 0.1s linear ani1 ;
-        width: 180px;
-        
-    }
-}
-@media (min-width: 850px){
-    .logo-atmosfera {
-        animation: 0.1s linear ani1-rev ;
-        width: 260px;
-    }
-}
+
 
 p.nav-botton {
     text-align: center;
@@ -119,24 +86,13 @@ p.nav-botton {
 .div-menu-button :active {
     background-color: rgba(0, 0, 0, 0.267);
 }
-@media (min-width: 850px){
-    .div-menu-button {
-        display: none;
-    }
-}
+
 .menu-button {
     height: 28px;
     padding: 16px;
     border-radius: 10px;
 }
-@media (max-width: 400px){
-    .menu-button {
-        height: 18px;
-    }
-    .logo-atmosfera {
-        width: 130px;
-    }
-}
+
 /* --------------------------------------------------------------- */
 
 .sec-img1 {
@@ -203,30 +159,7 @@ p.escolha-p {
 .escolha :active {
     color: #8a6540;
 }
-@media (max-width: 700px){
-    .escolha {
-        font-size: 14px;
-        padding-left: 7px; padding-right: 7px;
-    }
-    th.sec1-evento {
-        padding-left: 20px;
-    }
-    th.sec1-reserva {
-        padding-right: 20px;
-    }
-}
-@media (max-width: 300px){
-    .escolha {
-        font-size: 14px;
-        padding-left: 4px; padding-right: 4px;
-    }
-    th.sec1-evento {
-        padding-left: 10px;
-    }
-    th.sec1-reserva {
-        padding-right: 10px;
-    }
-}
+
 
 .linha-selecionado {
     width: 60px;
@@ -247,17 +180,6 @@ p.escolha-p {
     opacity: 0;
 }
 
-@media (max-width: 700px) {
-    .linha-selecionado {
-        width: 40px;
-    }
-    .linha-selecionado-esquerda {
-        left: 7px;
-    }
-    .linha-selecionado-direita {
-        right: 7px;
-    }
-}
 
 /* TEXTO E TITULO ESCOLHA */
 
@@ -513,93 +435,6 @@ p.texto {
     background-position: center;
 }
 
-@media (max-width: 1200px) {
-    .titulo-sec2 {
-        font-size: 38px;
-    }
-    .texto-sec2 {
-        font-size: 17px;
-    }
-}
-
-@media (max-width: 1100px) {
-    .bloco-texto {
-        margin: 40px 40px 40px 60px;
-        width: 90%;
-        background-color: #00000000;
-        background-image: url(imagens/fotos/imagem-fundo-ambiente.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        
-    }
-    .div-metade-bloco-texto {
-        justify-content: center;
-    }
-    .div-img-sec2 {
-        display: none !important; 
-    }  
-}
-
-@media (max-width: 1000px) {
-    .bloco-texto {
-        margin: 40px;
-        width: 90%;
-    }
-    .div-metade-bloco-texto {
-        justify-content: center;
-    }
-    .div-img-sec2 {
-        display: none !important; 
-    }  
-}
-@media (max-width: 600px) {
-    .botao-sec2 {
-        width: 205px;
-        font-size: 20px;
-    }
-    .botao-escolha {
-        width: 205px;
-        font-size: 20px;
-    }
-    h1.titulo-escolha {
-        font-size: 28px;
-    }
-    p.texto {
-        font-size: 16px;
-    }
-}
-
-@media (min-width: 1000px) {
-    .bloco-texto {
-        margin-right: 6%;
-    }
-}
-@media (min-width: 1200px) {
-    .bloco-texto {
-        margin-right: 7%;
-    }
-}
-@media (min-width: 1400px) {
-    .bloco-texto {
-        margin-right: 8%;
-    }
-}
-@media (min-width: 1600px) {
-    .bloco-texto {
-        margin-right: 9%;
-    }
-}
-@media (min-width: 1800px) {
-    .bloco-texto {
-        margin-right: 10%;
-    }
-}
-@media (min-width: 2000px) {
-    .bloco-texto {
-        margin-right: 11%;
-    }
-}
 
 /* -------------------------------- SEC 3 ---------------------------------- */
 
@@ -921,3 +756,361 @@ p.texto {
 #foto4-sec5 {
     grid-column: 4/5;
 }
+
+
+/* ----------------------------SEC 6----------------------------*/
+
+.sec6 {
+    width: 100%; height: auto;
+    background-color: #23201E;
+    padding: 160px 0;
+}
+.container-elementos-sec6 {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 25px;
+    padding: 0 25px;
+}
+
+/* ------ Container 1 ------*/
+
+.container1-sec6 {
+    display: grid;
+    grid-template-columns: 30px 1;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 7px;
+
+}
+
+.container1-sec6 div {
+    display: flex;
+    align-items: center;
+}
+
+.div-img-container1-sec6 {
+    display: flex;
+    align-items: center;
+}
+.img-container1 {
+    grid-column: 1/2;
+}
+.img1-container1 {
+    grid-row: 1/2;
+    width: 30px;height: 30px;
+}
+.img2-container1 {
+    grid-row: 2/3;
+    width: 30px;height: 24px;
+
+}
+.img3-container1 {
+    grid-row: 3/4;
+    width: 30px;height: 34px;
+}
+
+
+.span-container1 {
+    color: #CBC2B9;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    grid-column: 2/3;
+    margin-left: 15px;
+}
+
+.span1-container1 {
+    grid-row: 1/2;
+}
+.span2-container1 {
+    grid-row: 2/3;
+}
+.span3-container1 {
+    grid-row: 3/4;
+}
+
+/* ------ Container 2, 3 e 4 ------*/
+
+.container2_3_4-sec6 {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px;
+
+}
+.p1-container2_3_4 {
+    color: #CFA77F;
+    margin: 0;
+}
+.p2-container2_3_4 {
+    color: #CBC2B9;
+    margin: 0;
+    margin-top: 9px;    
+}
+/* ----------------------- FOOTER -------------------------- */
+
+footer {
+    width: 100%;height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.p-footer {
+    color: #000;
+    font-family: Montserrat;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+    margin: 0;
+    padding: 0;
+}
+
+/* ------------------------------- MEDIA --------------------------------- */
+@media (max-width: 550px) {
+    button {
+        width: 205px !important;
+        font-size: 21px !important;
+    }
+    /* -----------------Textos----------------- */
+    .texto, .texto-sec2, .texto-sec3, .texto-sec4 {
+        font-size: 17px !important;
+    } 
+    /* -----------------Titulos----------------- */
+    .titulo-sec2, .titulo-sec3, .titulo-sec4 {
+        font-size: 38px !important;
+    } 
+    .titulo-escolha {
+        font-size: 28px !important;
+    }
+    .escolha {
+        font-size: 14px;
+        padding-left: 7px; padding-right: 7px;
+    }
+}
+
+
+@media (max-width: 1100px) {
+    /* ------------ SEC2 --------- */
+    .bloco-texto {
+        margin: 40px 40px 40px 60px;
+        width: 90%;
+        background-color: #00000000;
+        background-image: url(imagens/fotos/imagem-fundo-ambiente.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        
+    }
+    .div-metade-bloco-texto {
+        justify-content: center;
+    }
+    .div-img-sec2 {
+        display: none !important; 
+    }  
+    /* ------------- SEC3------------- */
+
+    .container-comida {
+        width: 90%;
+        background-color: #e9000000;
+        background-image: url(imagens/fotos/foto-fundo-salmao.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .div-img-sec3 {
+        display: none;
+    }
+    .titulo-sec3, .texto-sec3, .div-botao-sec3 {
+        grid-column: 1/3;
+    }
+    
+}
+
+
+
+
+
+
+
+
+
+
+/* @media (max-width: 1200px) {
+    .titulo-sec2 {
+        font-size: 38px;
+    }
+    .texto-sec2 {
+        font-size: 17px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .bloco-texto {
+        margin: 40px 40px 40px 60px;
+        width: 90%;
+        background-color: #00000000;
+        background-image: url(imagens/fotos/imagem-fundo-ambiente.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        
+    }
+    .div-metade-bloco-texto {
+        justify-content: center;
+    }
+    .div-img-sec2 {
+        display: none !important; 
+    }  
+}
+
+@media (max-width: 1000px) {
+    .bloco-texto {
+        margin: 40px;
+        width: 90%;
+    }
+    .div-metade-bloco-texto {
+        justify-content: center;
+    }
+    .div-img-sec2 {
+        display: none !important; 
+    }  
+}
+@media (max-width: 600px) {
+    .botao-sec2 {
+        width: 205px;
+        font-size: 20px;
+    }
+    .botao-escolha {
+        width: 205px;
+        font-size: 20px;
+    }
+    h1.titulo-escolha {
+        font-size: 28px;
+    }
+    p.texto {
+        font-size: 16px;
+    }
+}
+
+@media (min-width: 1000px) {
+    .bloco-texto {
+        margin-right: 6%;
+    }
+}
+@media (min-width: 1200px) {
+    .bloco-texto {
+        margin-right: 7%;
+    }
+}
+@media (min-width: 1400px) {
+    .bloco-texto {
+        margin-right: 8%;
+    }
+}
+@media (min-width: 1600px) {
+    .bloco-texto {
+        margin-right: 9%;
+    }
+}
+@media (min-width: 1800px) {
+    .bloco-texto {
+        margin-right: 10%;
+    }
+}
+@media (min-width: 2000px) {
+    .bloco-texto {
+        margin-right: 11%;
+    }
+}
+@media (min-width: 850px){
+    .div-menu-button {
+        display: none;
+    }
+}
+@media (max-width: 400px){
+    .menu-button {
+        height: 18px;
+    }
+    .logo-atmosfera {
+        width: 130px;
+    }
+}
+    @media (max-width: 850px){
+    .nav-table {
+        display: none;
+    }
+    .logo-atmosfera {
+        animation: 0.1s linear ani1 ;
+        width: 180px;
+        
+    }
+}
+@media (min-width: 850px){
+    .logo-atmosfera {
+        animation: 0.1s linear ani1-rev ;
+        width: 260px;
+    }
+}
+@media (max-height: 700px) {
+    .navigation {
+        height: 85px;
+    }
+    .logo-atmosfera {
+        top: -3px !important;
+    }
+    .div-menu-button {
+        top: 14px !important;
+    }
+    .logo-atmosfera {
+        width: 180px !important;
+    }
+    .nav-table {
+        top: 23px !important;
+    }
+}    
+@media (max-width: 700px){
+    .escolha {
+        font-size: 14px;
+        padding-left: 7px; padding-right: 7px;
+    }
+    th.sec1-evento {
+        padding-left: 20px;
+    }
+    th.sec1-reserva {
+        padding-right: 20px;
+    }
+}
+@media (max-width: 300px){
+    .escolha {
+        font-size: 14px;
+        padding-left: 4px; padding-right: 4px;
+    }
+    th.sec1-evento {
+        padding-left: 10px;
+    }
+    th.sec1-reserva {
+        padding-right: 10px;
+    }
+}
+@media (max-width: 700px) {
+    .linha-selecionado {
+        width: 40px;
+    }
+    .linha-selecionado-esquerda {
+        left: 7px;
+    }
+    .linha-selecionado-direita {
+        right: 7px;
+    }
+}
+
+
+*/
