--- a/site-atmosfera/menu/style.css
+++ b/site-atmosfera/menu/style.css
@@ -108,37 +108,41 @@ p.nav-botton {
 
 .sec1 {
     width: 100%;
-    
     height: auto;
-    flex-shrink: 0;
-    background-color: #FEFEFE;
+    background: #FEFEFE;
     position: relative;
+    display: flex;
 }
 
 .linha-contorno {
     width: auto;
     height: auto;
-    border: 1px solid #827A66;
-    position: relative;
     margin: 30px;
-}
-/* ----------------------------------------------------------- */
-.table-escolha {
+    border: 1px solid #000;
+    display: grid;
     width: 100%;
-    margin: 0;
-    position: relative;
-    margin-top: 36px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.8fr 0.3fr 1.8fr 3fr 2fr;
+
+}
+/* ---------- Linha1 --------- */
+.escolha-div {
+    grid-row: 1/2;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+.escolha-div-left {
+    grid-column: 1/2;
     
-    
 }
-/* ----------------------------------------------------------- */
-th.sec1-evento {
-    padding-left: 50px;
+.escolha-div-center {
+    grid-column: 2/3;
 }
-th.sec1-reserva {
-    padding-right: 50px;
+.escolha-div-right {
+    grid-column: 3/4;
 }
-.escolha {
+.escolha-p {
     color: #534537;
     text-align: center;
     font-family: Montserrat;
@@ -146,69 +150,45 @@ th.sec1-reserva {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding-left: 15px; padding-right: 15px;
-    
-}
-p.escolha-p {
-    margin: 0;
+    margin-bottom: 0;
     cursor: pointer;
 }
-.escolha :hover {
+.escolha-div :hover {
     color: #b99a7b;
 }
-.escolha :active {
+.escolha-div :active {
     color: #8a6540;
 }
 
 
+/* ---------- Linha2 --------- */
+
+.div-linha-selecionado {
+    grid-row: 2/3;
+    grid-column: 2/3;
+}
 .linha-selecionado {
     width: 60px;
     height: 2px;
-    position: relative;
     background: #A66517;
     border: 0;
     transition-duration: 0.2s;
-    /* left: 32.5%; */
-}
-.linha-selecionado-esquerda {
-    left: 17.5px;
-    opacity: 0;
-    
-}
-.linha-selecionado-direita {
-    right: 17.5px;
-    opacity: 0;
 }
 
+/* ---------- Linha3 --------- */
 
-/* TEXTO E TITULO ESCOLHA */
-
-.tabela-texto-escolha {
-    width: 100%;
-    position: relative;
-    margin-top: 30px;
-    
-    
-}
-.th-linha {
-    width: 30%;
+.linha3 {
+    grid-row: 3/4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .linha-titulo {
     width: 75%;
     height: 1px;
     background: #827A66;
-    
-    
 }
-.linha-titulo-esquerda {
-    float: right;
-    margin-right: 5px;
-}
-.linha-titulo-direita {
-    float: left;
-    margin-left: 5px;
-}
-h1.titulo-escolha {
+.titulo-escolha {
     color: #000;
     text-align: center;
     font-family: "Libre Baskerville";
@@ -216,19 +196,19 @@ h1.titulo-escolha {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding: 0;
     margin: 0;
-    position: relative;
-}
-.th-titulo-escolha {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-p.texto {
+/* ---------- Linha4 --------- */
+
+.div-texto-escolha {
+    grid-row: 4/5;
+    grid-column: 1/4;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+.texto-escolha {
     color: #000;
     text-align: center;
     font-family: Montserrat;
@@ -236,22 +216,22 @@ p.texto {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    width: 80%;
-    margin: 0;
+    margin: 0 10%;
 }
 
-.div-texto-escolha {
+/* ---------- Linha5 --------- */
+
+.div-botao-escolha {
+    grid-row: 5/6;
+    grid-column: 1/4;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    position: relative;
-    margin-top: 40px;
+    padding-bottom: 2.5%;
 }
 .botao-escolha {
     width: 350px;
     height: 60px;
-    flex-shrink: 0;
     border: 1px solid #A66517;
     background-color: #00000000;
 
@@ -262,18 +242,11 @@ p.texto {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    position: relative;
     cursor: pointer;
     transition-duration: 0.2s;
 }
-.div-botao-escolha {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    margin-top: 45px;
-    margin-bottom: 45px;
-}
+
+/* -------------------------------- */
 
 .ripple {
     background-position: center;
@@ -288,6 +261,10 @@ p.texto {
     background-size: 100%;
     transition: background 0s;
 }
+
+
+
+/* --------------------------SEC2-------------------------- */
 .sec2 {
     width: 100%;
     height: auto;
@@ -481,8 +458,9 @@ p.texto {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin: 0 70px;
+    margin: 0 10%;
     grid-column: 1/2;
+    border: 1px solid green;
 }
 
 .div-botao-sec3 {
@@ -880,7 +858,7 @@ footer {
         font-size: 21px !important;
     }
     /* -----------------Textos----------------- */
-    .texto, .texto-sec2, .texto-sec3, .texto-sec4 {
+    .texto-escolha, .texto-sec2, .texto-sec3, .texto-sec4 {
         font-size: 17px !important;
     } 
     /* -----------------Titulos----------------- */
@@ -933,6 +911,55 @@ footer {
     }
     
 }
+
+
+
+/* --------------------------- */
+
+
+
+@media (min-width: 850px){
+    .div-menu-button {
+        display: none;
+    }
+    .logo-atmosfera {
+        width: 260px;
+    }
+}
+@media (max-width: 850px){
+    .nav-table {
+        display: none;
+    }
+    .logo-atmosfera {
+        width: 180px;
+    }
+}
+
+@media (max-width: 400px){
+    .menu-button {
+        height: 18px;
+    }
+    .logo-atmosfera {
+        width: 130px;
+    }
+}
+@media (max-height: 700px) {
+    .navigation {
+        height: 85px;
+    }
+    .logo-atmosfera {
+        top: -3px !important;
+    }
+    .div-menu-button {
+        top: 14px !important;
+    }
+    .logo-atmosfera {
+        width: 180px !important;
+    }
+    .nav-table {
+        top: 23px !important;
+    }
+}    
 
 
 
