--- a/site-atmosfera/menu/style.css
+++ b/site-atmosfera/menu/style.css
@@ -118,11 +118,11 @@ p.nav-botton {
     width: auto;
     height: auto;
     margin: 30px;
-    border: 1px solid #000;
+    border: 1px solid #827A66;
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.8fr 0.3fr 1.8fr 3fr 2fr;
+    grid-template-rows: auto auto auto auto auto;
 
 }
 /* ---------- Linha1 --------- */
@@ -130,11 +130,12 @@ p.nav-botton {
     grid-row: 1/2;
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: center;
+    /* border: 1px solid green; */
+    margin: 10px 0 3px 0;
 }
 .escolha-div-left {
     grid-column: 1/2;
-    
 }
 .escolha-div-center {
     grid-column: 2/3;
@@ -152,6 +153,8 @@ p.nav-botton {
     line-height: normal;
     margin-bottom: 0;
     cursor: pointer;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .escolha-div :hover {
     color: #b99a7b;
@@ -166,13 +169,18 @@ p.nav-botton {
 .div-linha-selecionado {
     grid-row: 2/3;
     grid-column: 2/3;
+    /* border: 1px solid green; */
+    margin: 0 0 45px 0;
+    transition-duration: 0.2s;
+    
 }
 .linha-selecionado {
     width: 60px;
     height: 2px;
     background: #A66517;
     border: 0;
-    transition-duration: 0.2s;
+    
+    
 }
 
 /* ---------- Linha3 --------- */
@@ -182,13 +190,18 @@ p.nav-botton {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 0 45px 0;
+    /* border: 1px solid green; */
 }
 .linha-titulo {
     width: 75%;
     height: 1px;
     background: #827A66;
+    border: none;
 }
 .titulo-escolha {
+    transition-duration: 200ms;
+
     color: #000;
     text-align: center;
     font-family: "Libre Baskerville";
@@ -206,9 +219,13 @@ p.nav-botton {
     grid-column: 1/4;
     display: flex;
     justify-content: center;
-    align-items: start;
+    align-items: center;
+    /* border: 1px solid green; */
+    margin: 0 0 50px 0;
 }
 .texto-escolha {
+    transition-duration: 200ms;
+
     color: #000;
     text-align: center;
     font-family: Montserrat;
@@ -227,9 +244,12 @@ p.nav-botton {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 2.5%;
+    margin: 0 0 30px 0;
+    /* border: 1px solid green; */
+    transition-duration: 200ms;
 }
 .botao-escolha {
+    transition-duration: 200ms;
     width: 350px;
     height: 60px;
     border: 1px solid #A66517;
@@ -460,7 +480,6 @@ p.nav-botton {
     line-height: normal;
     margin: 0 10%;
     grid-column: 1/2;
-    border: 1px solid green;
 }
 
 .div-botao-sec3 {
