--- a/site-atmosfera/menu/style.css
+++ b/site-atmosfera/menu/style.css
@@ -285,45 +285,50 @@ p.nav-botton {
 
 
 /* --------------------------SEC2-------------------------- */
+
 .sec2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: auto;
+    background: #FEFEFE;
     background: #36312C;
-    position: relative;
+}
+
+.container-sec2 {
+    
+    margin: 40px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
 }
 .bloco-texto {
-    width: 58%;
+    display: grid;
+    place-items: center;
+    grid-column: 2/3;
+    background-color: #524B45;
     height: auto;
-    flex-shrink: 0;
-    background: #524B45;
-    padding: 1px;
-    position: relative;
-    
-    margin: 40px 4% 40px 0;
+    padding: 30px;
+    max-width: 843px;
 
 }
-.div-metade-bloco-texto {
-    height: auto;
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-}
-
 .linha-contorno-sec2 {
-    width: auto;
-    height: auto;
-    margin: 30px;
-    flex-shrink: 0;
     border: 1px solid #e8e3de54;
-    position: relative;
-    padding: 0;
+    
+
+    display: grid;
+    grid-template-rows: 1fr 2fr 1fr;
 }
 
-.conteudo-sec2 {
-    position: relative;
-}
 
+
+.div-titulo-sec2 {
+    display: grid;
+    place-items: center;
+    margin: 20px;
+
+    grid-row: 1/2;
+}
 .titulo-sec2 {
     padding: 0;
     margin: 0;
@@ -334,7 +339,15 @@ p.nav-botton {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-top: 35px;
+}
+
+
+.div-texto-sec2 {
+    display: grid;
+    place-items: center;
+    margin: 20px;
+    grid-row: 2/3;
+
 }
 .texto-sec2 {
     padding: 0;
@@ -348,6 +361,13 @@ p.nav-botton {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+.div-botao-sec2 {
+    display: grid;
+    place-items: center;
+    margin: 20px;
+    grid-row: 3/4;
 }
 .botao-sec2 {
     color: #E8E3DE;
@@ -365,33 +385,37 @@ p.nav-botton {
     cursor: pointer;
 }
 
-.div-titulo-sec2 {
-    width: 100%;
-    position: relative;
-    padding: 0;
-    display: block;
-}
-.div-texto-sec2 {
-    width: 100%;
-    position: relative;
-    margin-top: 35px;
+
+.div-img-sec2 {
+    grid-column: 1/2;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    margin-right: -10px;
+    z-index: 1;
+}
+.img-sec2 {
+    width: 100%;
+    max-width: 450px;
+    
+
+    
 }
 
-.div-botao-sec2{
-    width: 100%;
-    position: relative;
-    margin-bottom: 35px;
-    margin-top: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .ripple1 {
     background-position: center;
@@ -406,32 +430,6 @@ p.nav-botton {
     background-size: 100%;
     transition: background 0s;
 }
-
-.div-img-sec2 {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.img-sec2 {
-    width: auto;
-    height: 390px;
-    z-index: 1;
-    left: 40px;
-    flex-shrink: 0;
-    position: relative;
-    box-shadow: -10px 10px 4px 4px rgba(36, 34, 32, 0.80);
-}
-
-.sec-img2 {
-    background-image: url(imagens/fotos/foto-deck.png);
-    width: 100%; height: 600px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-}
-
 
 /* -------------------------------- SEC 3 ---------------------------------- */
 
@@ -713,7 +711,7 @@ p.nav-botton {
 .img-flecha-sec5 {
     cursor: pointer;
     margin: 6px;
-    width: 37%;
+    width: 30px;
     /* max-width: 33px;
     min-width: 15px; */
 }
@@ -722,36 +720,48 @@ p.nav-botton {
     
 }
 .flecha-sec5-esquerda {
-    grid-column: 1/2;
+    /* grid-column: 1/2; */
 }
 .flecha-sec5-direita {
-    grid-column: 3/4;
+    /* grid-column: 3/4; */
     
 }
 
 .container-fotos-sec5 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: flex;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
     gap: 2%;
-    
-    
+    white-space: nowrap;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    justify-content: space-between;
 }
-.foto-sec5 {
+
+.container-fotos-sec5::-webkit-scrollbar {
+    display: none;
+}
+
+
+img.foto-sec5 {
+    width: clamp(200px, 20vw, 300px);
+    margin: 6% 0;
+}
+div.foto-sec5 {
     width: 100%;
     margin: 6% 0;
 }
 
 #foto1-sec5 {
-    grid-column: 1/2;
+    /* grid-column: 1/2; */
 }
 #foto2-sec5 {
-    grid-column: 2/3;
+    /* grid-column: 2/3; */
 }
 #foto3-sec5 {
-    grid-column: 3/4;
+    /* grid-column: 3/4; */
 }
 #foto4-sec5 {
-    grid-column: 4/5;
+    /* grid-column: 4/5; */
 }
 
 
@@ -897,17 +907,13 @@ footer {
 @media (max-width: 1100px) {
     /* ------------ SEC2 --------- */
     .bloco-texto {
-        margin: 40px 40px 40px 60px;
-        width: 90%;
+        grid-column: 1/3;
         background-color: #00000000;
         background-image: url(imagens/fotos/imagem-fundo-ambiente.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
         
-    }
-    .div-metade-bloco-texto {
-        justify-content: center;
     }
     .div-img-sec2 {
         display: none !important; 
